chore(readme): update url of twitter

--- a/portfolio-website/src/components/Experience.astro
+++ b/portfolio-website/src/components/Experience.astro
@@ -2,7 +2,7 @@
 const experiences = [
   {
     company: 'Shippit',
-    position: 'Senior Software Engineer',
+    position: 'Staff Engineer',
     period: 'Feb 2025 - Present',
     technologies: ['Ruby on Rails', 'Typescript', 'PostgreSQL', 'AWS']
   },
@@ -10,13 +10,13 @@ const experiences = [
     company: 'Luwjistik',
     position: 'Senior Software Engineer',
     period: 'Jun 2023 - Jan 2025',
-    technologies: ['Go', 'Typescript', 'PostgreSQL', 'AWS']
+    technologies: ['Go', 'Typescript', 'Ruby on Rails', 'PostgreSQL', 'AWS']
   },
   {
     company: 'Ruangguru',
     position: 'Backend Engineer',
     period: 'Oct 2021 - May 2023',
-    technologies: ['Go', 'MySQL', 'ElasticSearch', 'Microservices']
+    technologies: ['Go', 'Ruby on Rails', 'MySQL', 'ElasticSearch', 'Microservices']
   },
   {
     company: 'Wahyu Arta Digital',
