feat: add Google Analytics (G-XM31WFP1B8)

--- a/portfolio-website/src/layouts/BaseLayout.astro
+++ b/portfolio-website/src/layouts/BaseLayout.astro
@@ -16,6 +16,15 @@ const { title, description = "Senior Software Engineer with experience in big-sc
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title}</title>
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XM31WFP1B8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XM31WFP1B8');
+    </script>
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
